--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,36 +2,11 @@ pipeline {
     agent any
 
     stages {
-        stage('Init') {
+        stage('Clone the repo') {
             steps {
-                echo 'Initializing..'
-                echo "Running ${env.BUILD_ID} on ${env.JENKINS_URL}"
+                echo 'clone the repo'
+                sh 'rm -fr html'
+                sh 'git clone https://github.com/phule/demo_cucumber.git'
             }
         }
-        
-        stage('Test') {
-            steps {
-                echo 'Testing..'
-                echo 'Running pytest..'
-            }
-        }
-        stage('Build') {
-            steps {
-                echo 'Building..'
-                echo 'Running docker build -t sntshk/cotu .'
-            }
-        }
-        stage('Publish') {
-            steps {
-                echo 'Publishing..'
-                echo 'Running docker push..'
-            }
-        }
-        stage('Cleanup') {
-            steps {
-                echo 'Cleaning..'
-                echo 'Running docker rmi..'
-            }
-        }
-    }
 }
