--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Clone the repo') {
             steps {
                 echo 'clone the repo'
-                sh 'rm -fr html'
+                sh 'rm -fr demo_cucumber'
                 sh 'git clone https://github.com/phule/demo_cucumber.git'
             }
         }
