--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,9 +20,8 @@ pipeline {
         stage('Clone the repo') {
             steps {
                 echo 'clone the repo'
-                sh 'rm -fr demo_cucumber'
-                sh 'git clone https://github.com/phule/demo_cucumber.git'
-                sh 'cd ..'
+                //sh 'rm -fr demo_cucumber'
+                //sh 'git clone https://github.com/phule/demo_cucumber.git'
                 sh 'rm -rf ../codebase.automation-test.realauthentication'
                 sh 'git clone git@bitbucket.org:poetaadmin/codebase.automation-test.realauthentication.git ../codebase.automation-test.realauthentication'
                 sh 'cd ../codebase.automation-test.realauthentication'
