--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
             sh "echo Dependencies"
             sh "node --version"
             //sh 'cd /var/lib/jenkins/workspace/GithubExample/automation_cucumber'
-              dir("GithubExample/automation_cucumber"){
+              dir("automation_cucumber"){
                   sh 'npm install -g npm@latest'
                   sh 'npm run test'
               }
