--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,6 +31,7 @@ pipeline {
           steps {
             dir("automation_cucumber"){
                 sh "Generate HTML report"
+                sh 'npm install -g npm@latest'
                 sh 'node index.js'
             }
           }
