--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,8 +33,8 @@ pipeline {
            
             dir("automation_cucumber"){
               sh 'npm install'
-                sh 'node index.js'
-                sh 'npm run test'
+                //sh 'node index.js'
+                //sh 'npm run test'
             }
             
           }
