--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,8 +33,9 @@ pipeline {
            
             dir("automation_cucumber"){
               sh 'npm install'
-                //sh 'node index.js'
-                sh 'npm run test'
+                catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
+                    sh 'npm run test'
+                }
             }
             
           }
