--- a/jenkinsfile
+++ b/jenkinsfile
@@ -44,26 +44,7 @@ pipeline {
             
           }
         }
-//         stage('Run Test') {
-//           steps {
-//             sh "Run Test"
-//             dir("automation_cucumber"){
-//                 catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
-//                     sh 'npm install'
-//                     sh 'npm run test'
-//                  }
-//             }
-//           }
-//         }
-//         stage('Generate HTML report') {
-//           steps {
-//             sh "Generate HTML report"
-//             dir("automation_cucumber"){
-//                 sh 'npm install'
-//                 sh 'node index.js'
-//             }
-//           }
-//         }
+
         stage('Get Results') {
           steps {
             sh "echo Get Results"
@@ -72,7 +53,7 @@ pipeline {
                   run test, copy the report file out of docker or where ever it is...
                   */
 
-                  archiveArtifacts artifacts: "cucumber_report.html", fingerprint: true
+                  //archiveArtifacts artifacts: "cucumber_report.html", fingerprint: true
 
                   // our Groovy script will be contained in this scope
                   script {
@@ -91,8 +72,8 @@ pipeline {
                       String[] lines = report.split("\n")
                      
                       // use regex to find the "passed" line and "failed" line
-                      def foundPassedLine = lines.find{ line-> line =~ /\<span class="label label-success" title=scenarios\>/ }
-                      def foundFailedLine = lines.find{ line-> line =~ /\<span class="label label-danger" title=scenarios\>/ }
+                      def foundPassedLine = lines.find{ line-> line =~ /\<span class="label label-success" onclick="toggle('.feature-passed')" title="scenarios">/ }
+                      def foundFailedLine = lines.find{ line-> line =~ /\<span class="label label-danger" onclick="toggle('.feature-failed')" title="scenarios">/ }
                       
                       // match for the numeric values
                       def passedMatch = (foundPassedLine =~ /[0-9]+/)
