--- a/jenkinsfile
+++ b/jenkinsfile
@@ -72,8 +72,8 @@ pipeline {
                       String[] lines = report.split("\n")
                      
                       // use regex to find the "passed" line and "failed" line
-                      def foundPassedLine = lines.find{ line-> line =~ /\<span class="label label-success" onclick="toggle('.feature-passed')" title="scenarios">/ }
-                      def foundFailedLine = lines.find{ line-> line =~ /\<span class="label label-danger" onclick="toggle('.feature-failed')" title="scenarios">/ }
+                      def foundPassedLine = lines.find{ line-> line =~ /<span class="label label-success" onclick="toggle('.feature-passed')" title="scenarios">/ }
+                      def foundFailedLine = lines.find{ line-> line =~ /<span class="label label-danger" onclick="toggle('.feature-failed')" title="scenarios">/ }
                       
                       // match for the numeric values
                       def passedMatch = (foundPassedLine =~ /[0-9]+/)
