--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,6 +17,43 @@ pipeline {
     }
   
     stages {
+        stage('Clone qc test'){
+            steps {
+                echo 'remote server'
+                sh 'ssh -f id_rsa_qc forge@'
+                sh 'cd releases-auto-test52.13.190.167'
+                sh 'ls -lt | tail -n +5 | awk "{print $9}" | xargs rm -rf'
+                sh 'git clone git@github.com:Real-Authentication/BFS_RLA.git RA_$(date +"%Y%m%d%s")' 
+                sh 'cd $(ls -td -- */ | head -n 1)'
+                sh 'git checkout qc'
+                sh 'git pull'
+                sh 'cp ~/environment-auto-test/.env www/'
+                sh 'cp ~/environment-auto-test/.env.frontend www/front/.env'
+                sh 'cp ~/environment-auto-test/oauth-* www/storage/'
+                sh 'cd www/front'
+                sh 'npm install'
+                sh 'npm run build-prod:main'
+                sh 'npm run build-prod:admin'
+                sh 'npm run build:global-header-and-footer'
+                sh 'cd ..'
+                sh 'composer install'
+                sh 'yarn install'
+                sh 'npm install'
+                sh 'npm run prod'
+                sh 'echo QSr%@B{7bME3@6L | sudo -S chown -R forge:www-data' .
+                sh 'echo QSr%@B{7bME3@6L | sudo -S chgrp -R  www-data storage/'
+                sh 'echo QSr%@B{7bME3@6L | sudo -S chmod -R ug+rwx storage'
+                sh 'php artisan migrate'
+                sh 'php artisan config:clear'
+                sh 'composer customer-api-test'
+                sh 'cd ~'
+                sh 'rm app.realauthentication.com-plus'
+                sh 'ln -sf "$(ls -1dt releases-plus/*/ | sed 1q)" app.realauthentication.com-plus'
+                sh 'echo QSr%@B{7bME3@6L | sudo -S service php7.3-fpm restart'
+                sh 'echo QSr%@B{7bME3@6L | sudo supervisorctl stop horizon'
+                sh 'echo QSr%@B{7bME3@6L | sudo supervisorctl start horizon'
+            }
+        }
         stage('Clone the repo') {
             steps {
                 echo 'clone the repo'
