--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,8 +20,8 @@ pipeline {
         stage('Clone qc test'){
             steps {
                 echo 'remote server'
-                sh 'ssh -f id_rsa_qc forge@'
-                sh 'cd releases-auto-test52.13.190.167'
+                sh 'ssh -i ~/.ssh/id_rsa_qc forge@52.13.190.167'
+                sh 'cd releases-auto-test'
                 sh 'ls -lt | tail -n +5 | awk "{print $9}" | xargs rm -rf'
                 sh 'git clone git@github.com:Real-Authentication/BFS_RLA.git RA_$(date +"%Y%m%d%s")' 
                 sh 'cd $(ls -td -- */ | head -n 1)'
