--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,11 +20,14 @@ pipeline {
         stage('Clone qc test'){
             steps {
                 echo 'remote server'
-                sh 'ssh -i ~/.ssh/id_rsa_qc forge@52.13.190.167'
-                dir('releases-auto-test'){
-                    sh 'ls -lt | tail -n +5 | awk "{print $9}" | xargs rm -rf'
-                    sh 'git clone git@github.com:Real-Authentication/BFS_RLA.git RA_$(date +"%Y%m%d%s")' 
+                sshagent(['ssh-agent']) {
+                    sh 'ssh -i ~/.ssh/id_rsa_qc forge@52.13.190.167'
+                    dir('releases-auto-test'){
+                        sh 'ls -lt | tail -n +5 | awk "{print $9}" | xargs rm -rf'
+                        sh 'git clone git@github.com:Real-Authentication/BFS_RLA.git RA_$(date +"%Y%m%d%s")'
+                    }
                 }
+                
 //                 dir($(ls -td -- */ | head -n 1)){
 //                     sh 'git checkout qc'
 //                     sh 'git pull'
