--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,10 +22,9 @@ pipeline {
                 echo 'remote server'
                 sshagent(['ssh-agent']) {
                     sh 'ssh -i id_rsa_qc forge@52.13.190.167'
-                    dir('releases-auto-test'){
-                        sh 'ls -lt | tail -n +5 | awk "{print $9}" | xargs rm -rf'
-                        sh 'git clone git@github.com:Real-Authentication/BFS_RLA.git RA_$(date +"%Y%m%d%s")'
-                    }
+                    cd '~/releases-auto-test'
+                    sh 'ls -lt | tail -n +5 | awk "{print $9}" | xargs rm -rf'
+                    sh 'git clone git@github.com:Real-Authentication/BFS_RLA.git RA_$(date +"%Y%m%d%s")'
                 }
                 
 //                 dir($(ls -td -- */ | head -n 1)){
