--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,10 +21,10 @@ pipeline {
             steps {
                 echo 'remote server'
                 sshagent(credentials:['ssh-agent']) {
-                    sh 'ssh -i ~/id_rsa_qc forge@52.13.190.167 uname -a'
-                    sh 'cd releases-auto-test'
+                    sh 'ssh -i ~/id_rsa_qc forge@52.13.190.167 uname -a cd releases-auto-test git clone git@github.com:Real-Authentication/BFS_RLA.git RA_$(date +"%Y%m%d%s")'
+                    //sh 'cd releases-auto-test'
                     //sh 'ls -lt | tail -n +5 | awk "{print $9}" | xargs rm -rf'
-                    sh 'git clone git@github.com:Real-Authentication/BFS_RLA.git RA_$(date +"%Y%m%d%s")'
+                    //sh 'git clone git@github.com:Real-Authentication/BFS_RLA.git RA_$(date +"%Y%m%d%s")'
                 }
                 
 //                 dir($(ls -td -- */ | head -n 1)){
