--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,8 +7,6 @@ int e2ePercent
 def remote = [:]
 remote.name = "ra-auto-test"
 remote.host = "52.13.190.167"
-remote.user = "forge"
-remote.identityFile = "~/.ssh/id_rsa_qc"
 remote.allowAnyHosts = true
 pipeline {
     agent any
@@ -25,6 +23,10 @@ pipeline {
         stage('Clone qc test'){
             steps {
                 echo 'remote server'
+                withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: 'id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
+                    remote.user = userName
+                    remote.identityFile = identity
+                }
                 sshScript remote: remote, script: "auto-test.sh"
             }
         }
