--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,12 +23,13 @@ pipeline {
         stage('Clone qc test'){
             steps {
                 echo 'remote server'
-                withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: 'id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
-                    remote.user = userName
-                    remote.identityFile = identity
-                    sshScript remote: remote, script: "auto-test.sh"
+                node{
+                    withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: 'id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
+                        remote.user = userName
+                        remote.identityFile = identity
+                        sshScript remote: remote, script: "auto-test.sh"
+                    }
                 }
-                
             }
         }
         stage('Clone the repo') {
