--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,11 +21,14 @@ pipeline {
   
     stages {
         stage('Clone qc test'){
-            withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: 'id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
-                remote.user = forge
-                remote.identityFile = identity
+            steps{
                 echo 'remote server'
-                sshScript remote: remote, script: "auto-test.sh"
+                withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: 'id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
+                    remote.user = forge
+                    remote.identityFile = identity
+                    
+                    sshScript remote: remote, script: "auto-test.sh"
+                }
             }
         }
         stage('Clone the repo') {
