--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,9 +25,14 @@ pipeline {
             steps{
                 echo 'remote server'
                 withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: 'id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
-                    remote.user = forge
-                    remote.identityFile = identity
-                    stage('Clone qc test'){
+                    step{
+                        remote.user = forge
+                    }
+                    step{
+                        remote.identityFile = identity
+                    }
+                    
+                    step{
                         sshScript remote: remote, script: "auto-test.sh"
                     }
                 }
