--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
                     remote.name = "ra-auto-test"
                     remote.host = "52.13.190.167"
                     remote.allowAnyHosts = true
-                    withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: 'identity', passphraseVariable: '', usernameVariable: 'forge')]) {
+                    withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: '/var/lib/jenkins/id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
                         step{
                             remote.user = forge
                             remote.identityFile = identity
