--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,8 +24,9 @@ pipeline {
                     def remote = [:]
                     remote.name = "ra-auto-test"
                     remote.host = "52.13.190.167"
+                    remote.user = "forge"
                     remote.allowAnyHosts = true
-                    withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: 'id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
+                    withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: identity, passphraseVariable: '', usernameVariable: 'forge')]) {
                         
                             remote.user = forge
                             remote.identityFile = identity
