--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,16 +22,14 @@ pipeline {
             steps{
                 script{
                     def remote = [:]
-                    remote.name = "ra-auto-test"
-                    remote.host = "52.13.190.167"
-                    remote.user = "forge"
+                    remote.name = 'ra-auto-test'
+                    remote.host = '52.13.190.167'
+                    remote.user = 'forge'
                     remote.allowAnyHosts = true
-                    withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: identity, passphraseVariable: '', usernameVariable: 'forge')]) {
-                        
-                            remote.user = forge
-                            remote.identityFile = identity
-                            sshScript remote: remote, script: "auto-test.sh"
-                       
+                    withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: 'identity', passphraseVariable: '', usernameVariable: 'forge')]) {
+                        remote.user = forge
+                        remote.identityFile = identity
+                        sshScript remote: remote, script: "auto-test.sh"
                     }
                 }   
             }
