--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
                     
                     remote.allowAnyHosts = true
                     node {
-                        withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: '.ssh/id_rsa_qc', passphraseVariable: '', usernameVariable: 'jenkins')]) {
+                        withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: 'identity', passphraseVariable: '', usernameVariable: 'jenkins')]) {
                             remote.user = jenkins
                             remote.identityFile = identity
                             sshCommand remote: remote, command: 'for i in {1..5}; do echo -n \"Loop \$i \"; date ; sleep 1; done'
