--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,8 +27,8 @@ pipeline {
                     
                     remote.allowAnyHosts = true
                     node {
-                        withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: '.ssh/id_rsa_qc', passphraseVariable: '', usernameVariable: 'jenkins')]) {
-                            remote.user = jenkins
+                        withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: '.ssh/id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
+                            remote.user = 'forge'
                             remote.identityFile = '.ssh/id_rsa_qc'
                             sshCommand remote: remote, command: 'for i in {1..5}; do echo -n \"Loop \$i \"; date ; sleep 1; done'
                             //sshScript remote: remote, script: "auto-test.sh"
