--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,9 +27,9 @@ pipeline {
                     
                     remote.allowAnyHosts = true
                     node {
-                        withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: '.ssh/id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
+                        withCredentials([sshUserPrivateKey(credentialsId: 'ssh-agent', keyFileVariable: 'id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
                             remote.user = 'forge'
-                            remote.identityFile = '.ssh/id_rsa_qc'
+                            remote.identityFile = 'd_rsa_qc'
                             sshCommand remote: remote, command: 'for i in {1..5}; do echo -n \"Loop \$i \"; date ; sleep 1; done'
                             //sshScript remote: remote, script: "auto-test.sh"
                         }
