--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
                             remote.user = forge
                             remote.identityFile = id_rsa_qc
                             //sshCommand remote: remote, command: 'for i in {1..5}; do echo -n \"Loop \$i \"; date ; sleep 1; done'
-                            sshScript remote: remote, script: "auto-test.sh"
+                            sshScript remote: remote, script: "/auto-test.sh"
                         }
                     }
                 }   
